--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,10 @@
             <artifactId>HADLM2</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>fr.alma</groupId>
+            <artifactId>HADL-annotations</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
