--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+         <groupId>fr.alma</groupId>
+         <artifactId>HADL-annotations</artifactId>
+         <version>1.0-SNAPSHOT</version>
+      </dependency>
+        <dependency>
             <groupId>fr.alma</groupId>
             <artifactId>HADL-annotations</artifactId>
             <version>1.0-SNAPSHOT</version>
